feat(m2): implement protected category tree
